v0.11.1/_sources/generated/statsmodels.regression.rolling.RollingRegressionResults.rst.txt
statsmodels.regression.rolling.RollingRegressionResults
=======================================================

.. currentmodule:: statsmodels.regression.rolling

.. autoclass:: RollingRegressionResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~RollingRegressionResults.conf_int
      ~RollingRegressionResults.cov_params
      ~RollingRegressionResults.load
      ~RollingRegressionResults.plot_recursive_coefficient
      ~RollingRegressionResults.remove_data
      ~RollingRegressionResults.save
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~RollingRegressionResults.aic
      ~RollingRegressionResults.bic
      ~RollingRegressionResults.bse
      ~RollingRegressionResults.centered_tss
      ~RollingRegressionResults.cov_type
      ~RollingRegressionResults.df_model
      ~RollingRegressionResults.df_resid
      ~RollingRegressionResults.ess
      ~RollingRegressionResults.f_pvalue
      ~RollingRegressionResults.fvalue
      ~RollingRegressionResults.k_constant
      ~RollingRegressionResults.llf
      ~RollingRegressionResults.mse_model
      ~RollingRegressionResults.mse_resid
      ~RollingRegressionResults.mse_total
      ~RollingRegressionResults.nobs
      ~RollingRegressionResults.params
      ~RollingRegressionResults.pvalues
      ~RollingRegressionResults.rsquared
      ~RollingRegressionResults.rsquared_adj
      ~RollingRegressionResults.ssr
      ~RollingRegressionResults.tvalues
      ~RollingRegressionResults.uncentered_tss
      ~RollingRegressionResults.use_t
   
   
   